<?xml version="1.0"?>
<package>
  <name>akshay_lio</name>
  <version>0.0.0</version>
  <description>Iteratively reproduces FAST-LIO</description>
  <maintainer email="aksgula22@gmail.com">Akshay Gulabrao</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
   <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>